--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -2,6 +2,10 @@ backend:
   name: git-gateway
 
 media_folder: source/images/uploads
+media_library:
+ name: uploadcare
+ config:
+   publickey: demopublickey
 public_folder: /images/uploads
 
 publish_mode: editorial_workflow #optional, enables publishing workflow
